minor fix to skills on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -79,6 +79,7 @@
   /* Skills */
 
   .skills {
+    padding: 1rem;
     padding-bottom: 5rem;
   }
 
